# analytics-infrastructure

./: Dockerfile  README.md  app.cloudformation.yml  baker_todo.md  cicd.cloudformation.yml  config.py  deleteme.txt  deploy-cicd.sh  deploy-security.sh  hello-world.py  pyproject.toml  run.sh  security.cloudformation.yml
.github/actions/verify-docker/: action.yml
.github/workflows/: build-and-deploy.yml  ci-deploy.yml  ci-verify-cloudformation.yml  ci-verify-docker.yml  ci-verify-dockerfile.yml  ci-verify-python.yml  ci-verify.yml
.github/workflows/actions/: verify-docker.yml
sql-files/: multi-command.sql  temp-table-test.sql
src/: .env.example  bonjour.py  config.py  demo-env-vars.py  glob_test.py  hello-world.py  howdy.py  pyproject.toml  redshift-cmd-line-dir-of-files-test.py  redshift-cmd-line-multi-statement-file-test.py  redshift-cmd-line-single-statement-file-test.py  redshift-connect-test.py  redshift-simple-connect-test.py  redshift-simple-file-test.py  redshift-sql-complex-file-test.py  redshift-sql-dir-of-files-test.py  redshift-sql-single-file-test.py  redteamfuncs.py  test.py
src/sql-files/: single-command.sql
